<resources>
    <string name="app_name">Full Circle</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_text">Login</string>
    <string name="password_text_view">Password:</string>
    <string name="username_text_view">Username:</string>
    <string name="password_edit_text_hint">Enter password</string>
    <string name="username_edit_text_hint">Enter username</string>
    <string name="taylor_swift">Welcome, Taylor Swift!</string>
    <string name="new_plan_button_text">New Plan</string>
    <string name="existing_plan_buttno_text">Existing Plan</string>
    <string name="view_plan_button_text">View Plan</string>
    <string name="update_plan_button_text">Update Plan</string>
    <string name="arrival_data_textview_text">Arrival date:</string>
    <string name="dept_date_textview_text">Dept date:</string>
    <string name="no_of_pax_textview">No. of pax:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="find_accommodation_textview">Find accommodation?</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="select_one_text_view">Select one:</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_pass_text_view">Confirm Password:</string>
    <string name="confirm_password_edit_text">Confirm password</string>
    <string name="no_account_text_view">New user?</string>
    <string name="top_attraction_text_view">Top Attractions</string>
    <string name="visit_date_text_view">Visit Date:</string>
    <string name="visit_time_text_view">Visit Time:</string>
    <string name="dd_mm_yyyy_edittext">dd/mm/yyyy</string>
    <string name="hh_mm_edit_text">hh:mm</string>
    <string name="okay_button">Okay</string>
    <string name="merlion_caption">Merlion Park</string>
    <string name="sg_flyer_caption">Singapore Flyer</string>
    <string name="delete_activity_text_view">Delete Activity</string>
    <string name="done_menu">Done</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
</resources>
