<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        android:layout_marginTop="134dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/usernameEditText"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/username_edit_text_hint"
        android:layout_below="@+id/imageView"
        android:layout_toEndOf="@+id/usernameTextView"
        android:layout_marginStart="25dp"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignStart="@+id/usernameEditText"
        android:layout_marginTop="26dp"
        android:background="@android:color/white"
        android:hint="@string/password_edit_text_hint"
        android:password="true"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/username_text_view"
        android:id="@+id/usernameTextView"
        android:layout_above="@+id/passwordEditText"
        android:layout_toStartOf="@+id/imageView"
        android:textAlignment="center"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/password_text_view"
        android:id="@+id/passwordTextView"
        android:textAlignment="gravity"
        android:textSize="16sp"
        android:layout_alignTop="@+id/passwordEditText"
        android:layout_alignStart="@+id/usernameTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_marginTop="10dp"
        android:onClick="onLoginClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_text_view"
        android:id="@+id/textView9"
        android:layout_below="@+id/loginBtn"
        android:layout_alignEnd="@+id/loginBtn"
        android:autoText="false"
        android:onClick="newUser"/>


</RelativeLayout>
