<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        android:layout_marginTop="134dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/visit_date_text_view"
                android:id="@+id/visitDateTextView"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/visit_time_text_view"
                android:id="@+id/visitTimeTextView"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>





        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout3"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="30dp">

            <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/dateEditText"
                android:inputType="date"
                android:background="@android:color/white"
                android:hint="@string/dd_mm_yyyy_edittext" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/timeEditText"
                android:background="@android:color/white"
                android:hint="@string/hh_mm_edit_text"
                android:inputType="time"
                android:layout_marginTop="10dp"
                android:enabled="false"
                />



        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay_button"
        android:id="@+id/dateInputBut"
        android:onClick="onConfirmDateAndTime"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="56dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"/>


</RelativeLayout>